# llm-flywheel

./: .gitignore  Makefile  README.md  bench_infer.py  blog.md  cifar5_llm_distill.py  confidence_analysis.py  confidence_analysis_results.json  cost_analysis_results.json  cost_breakeven.py  cost_worksheet.py  export_model.py  infer_one.py  latency_comparison.py  latency_comparison_results.json  plot_confusion.py  pyproject.toml  throughput.py
cifar5_run/artifacts/: eval.json
cifar5_run/exports/: labels.json
sample_results/: README.md  classification_report.txt  eval.json
